appId: co.openvine.app
env:
  VIDEO_USER: ""
  VIDEO_DESCRIPTION: ""
tags:
  - Social
---
#TC to follow a user,
# given the user is logged in in the app,
# by starting to follow and validate it on the home screen and on the following count
#Steps:
# 1. Given an already logged in user, tap on Explore: Explore screen is presented
# 2. Tap on the first video of the grid and follow the user VIDEO_USER and set VIDEO_DESCRIPTION. Expected: Following is displayed
# 3. Browse to the home screen: VIDEO_USER videos are displayed validated thru username
# 4. Tap on profile: validate 1 following user
# 5. Tap on Following: VIDEO_USER is listed in User's Following

# 1. Given an already logged in user, tap on Explore: Explore screen is presented
- doubleTapOn:
    id: explore_tab
    delay: 100
- waitForAnimationToEnd
- runFlow: ../asserts/assertExploreNew.yaml


# 2. Tap on the first video of the grid and follow the user VIDEO_USER and set VIDEO_DESCRIPTION. Expected: Following is displayed
- tapOn:
    id: video_thumbnail_0


- assertVisible: Follow
#Follow VIDEO_USER
- tapOn:
    id: follow_button

# TO-DO: Extract the text from the username


# 3. Browse to the home screen: VIDEO_USER videos are displayed validated thru username
# Back button on iOS devices
- runFlow:
    when:
      visible: |-
        Go back
        Back
    commands:
      - assertVisible: |-
          Go back
          Back
      - tapOn: |-
          Go back
          Back

# Back button on Android devices
- runFlow:
    when:
      visible: Go back
    commands:
      - assertVisible: Go back
      - tapOn: Go back


- doubleTapOn:
    id: home_tab
    delay: 100
- assertVisible:
    text: ${VIDEO_DESCRIPTION}
    optional: true

# 4. Tap on profile: validate 1 following user
- doubleTapOn:
    id: profile_tab
    delay: 100
- assertVisible: |-
    1
    Following

# 5. Tap on Following: VIDEO_USER is listed in User's Following
- tapOn: |-
    1
    Following
- assertVisible:
    text: ${VIDEO_USER}
- runFlow: ../asserts/assertUsersFollowing.yaml
- tapOn: Back
